Testing fix of image display distortion on Safari browser on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,6 +286,10 @@ footer {
     width: 50%;
     height:auto;
   }
+  .image > img {
+    width: 50%;
+    height: auto;
+  }
 
   #yam-intro {
     width: 80%;
